--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             data-aos-duration="2000"
             data-aos-delay="800"
             data-aos-once="false">
-                <div class="info flex col a-i-c j-c-e" id="address">
+                <div class="info flex col a-i-c j-c-a" id="address">
                     <p id="copyLink">
                         3482 SW <br>
                         Cedar Hills Blvd, <br>
