fix responsive design

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="./index.html"><li>Home</li></a>
                 <a onclick="openPDF()"><li>Menu</li></a>
                 <a href="./contact.html"><li>Contact</li></a>
-                <a href="https://www.chownow.com/order/33571/locations/50353" target="_blank"><li id="order-online">Order Online</li></a>
+                <a disabled><li id="order-online">Order Online <br><p id="coming-soon-land">coming soon</p></li></a>
             </ul>
         </nav>
     </header>
@@ -192,7 +192,7 @@
                         </div>
                         <div>
                             <p id="subtitle">
-                                JCD has been a family owned and operating business since 2003 and strives to deliver the best authentic experience in Korean barbecue. <br>JCD K-BBQ uses fresh quality ingredient made to order and offers a selection of premium meats, banchans (side dishes), traditional Korean favorites and specialties from our family recipe. 
+                                JCD has been a family owned and operating business since 2003 <br> and strives to deliver the best authentic experience in Korean barbecue. <br>JCD K-BBQ uses fresh quality ingredient made to order and offers a selection of premium meats, <br> banchans (side dishes), traditional Korean favorites and specialties from our family recipe. 
                             </p>
                         </div>    
                     </div>
