--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 data-aos-delay="200"
                 data-aos-once="false">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2796.7637983105565!2d-122.81200852383432!3d45.49470103140336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950ea324c555b5%3A0x13c832d9a63f1fc1!2s3482%20SW%20Cedar%20Hills%20Blvd%2C%20Beaverton%2C%20OR%2097005!5e0!3m2!1sen!2sus!4v1697327348819!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <a href="https://maps.app.goo.gl/uwiWTDG2AUU9Umd79" target="_blank">Open location on Google Map</a>
+                    <a href="https://maps.app.goo.gl/gWcWwTxhy5CU6Vrs6" target="_blank">Open location on Google Map</a>
                     <div id="landscape-only">
                         <p id="days">
                             Mon <br>
