organize responsive elements

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
                         &#128339; Open Hours<br>
                     </p>
                     <div class="info-content">
-                        <p style="line-height: 1.5rem;">
+                        <p class="open-time">
                             <span style="font-weight: 400;">Mon - <span
-                                    style="color:rgb(156, 205, 254)">Sat</span></span> <br>
+                                    style="color:rgb(97, 176, 255)">Sat</span></span> <br>
                             4PM - 11:30PM <br>
                         </p>
-                        <p style="padding-top: 0.5rem; line-height: 1.5rem;">
-                            <span style="color:rgb(249, 135, 135); font-weight: 400;">Sun</span> <br>
+                        <p style="padding-top: 0.5rem;" class="open-time">
+                            <span style="color:rgb(255, 102, 102); font-weight: 400;">Sun</span> <br>
                             4PM - 10:30PM <br>
                         </p>
                     </div>
@@ -182,9 +182,9 @@
                         data-aos-delay="800" data-aos-once="false">
                         <div class="flex row" id="welcome-title">
                             <h1>
-                                Welcome to <br>
+                                Hello, we are
                                 <span id="jcdbbq">
-                                    <span class="orange-font">JCD</span>BBQ
+                                    JCD <span style="color: rgb(237, 39, 39);">K</span>-BBQ
                                 </span>
                             </h1>
                         </div>
@@ -204,8 +204,9 @@
                 </div>
             </div>
             <div class="flex col j-c-c" id="footer">
-                <p class="white-font">Copyright &copy; 2025</p>
-                <p>Web Dev & Design <a href="https://linktr.ee/hypyeon" target="_blank"
+                <p class="footer-copy">Copyright &copy; 2025</p>
+                <p class="webdev">Web Dev & Design 
+                    <a href="https://linktr.ee/hypyeon" target="_blank"
                         class="white-font hayeong">Hayeong Pyeon</a></p>
                 <p class="copyright">Icons by <a href="https://icons8.com/icons" target="_blank">ICON8</a> & Photos by
                     <a href="https://www.pexels.com/" target="_blank">Pexels</a></p>
