--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <script src="./js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
     <title>JCD K-BBQ</title>
 </head>
 
@@ -18,7 +18,7 @@
             <span></span>
             <span></span>
             <ul class="flex row j-c-a a-i-c" id="menu">
-                <a href="./index.html">
+                <a href="/index.html">
                     <li>home</li>
                 </a>
                 <a onclick="openPDF()">
@@ -33,13 +33,13 @@
     <header id="header-landscape">
         <nav id="nav-landscape">
             <ul id="menu-landscape">
-                <a href="./index.html">
+                <a href="/index.html">
                     <li>Home</li>
                 </a>
                 <a onclick="openPDF()">
                     <li>Menu</li>
                 </a>
-                <a href="./contact.html">
+                <a href="/contact.html">
                     <li>Contact</li>
                 </a>
             </ul>
