compile css with npx

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <nav id="nav-landscape">
             <ul id="menu-landscape">
                 <a href="/index.html">
-                    <li>Home</li>
+                    <li>home</li>
                 </a>
                 <a onclick="openPDF()">
-                    <li>Menu</li>
+                    <li>menu</li>
                 </a>
                 <a href="/contact.html">
-                    <li>Contact</li>
+                    <li>contact</li>
                 </a>
             </ul>
         </nav>
